--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -355,9 +355,8 @@ body .full-width{
     transition: all 300ms ease-in-out;
 }
 .form-group > button:hover{
-    transform: rotate(360deg);
     color: var(--cor_2);
-    transition: 1.5s;
+    transition: .4s;
     text-shadow: 0 0 5px var(--cor_2);
     box-shadow: 0 0 25px var(--cor_2);
 }
